--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Privacy Policy</h1>
-      <h2>Enterprize: Futtura </h2>
+      <h2>Enterprise: Futtura </h2>
     <p>This game does not receive any user information.<p>
     <p>
       This game was created by a student of Futtura's school.
