--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Privacy Policy - Fuja Pudim</title>
+    <title>Privacy Policy</title>
     <link rel="icon" type="image/ico" href="flag.ico">
             
   </head>
