--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
   </head>
   <body>
     <h1>Privacy Policy</h1>
-      <h2>Enterprise: Futtura </h2>
-    <p>This game does not receive any user information.<p>
+    <h3> Enterprise: Futtura </h3>
+    </br></br>
+    <h2>We don't collect any "personal data"</h2>
     <p>
-      This game was created by a student of Futtura's school.
-      It is checked by the teachers so that it does not affect any privacy laws or affect the security from the users.
+      If information isn't collect, it can't be stolen, demanded, leaked or abused. Protectiong your 
+      personal data is the best way to safeguard your privacy.
+    </p>
+
+    <h2>How we define "personal data"</h2>
+    <p>
+        Our definition of personal data is based on the privacy laws and regulations of the EU, including the 
+        General Data Protection Regulation (GDPR). These are widely regarded as the strongest privacy protections in the
+        world. We consider any information about you or your behavior that can be traced back to you as personal data.
     </p>
   </body>
 </html>
